// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shoud render component 1`] = `
<div
  className="sldr "
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
>
  <div
    className="sldr__wrapper"
    style={
      Object {
        "transform": "translate3d(0%,0,0)",
      }
    }
  >
    <ul
      className="sldr__list"
    >
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide1"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide2"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide3"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide4"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide5"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide6"
        />
      </li>
    </ul>
  </div>
  <div
    className="sldr__controls"
  >
    <button
      className="sldr__control sldr__control--prev"
      onClick={[Function]}
      type="button"
    >
      ←
    </button>
     
    <button
      className="sldr__control sldr__control--next"
      onClick={[Function]}
      type="button"
    >
      →
    </button>
  </div>
</div>
`;

exports[`should render component with custom props 1`] = `
<div
  className="sldr custom-slider-class"
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
>
  <div
    className="sldr__wrapper"
    style={
      Object {
        "transform": "translate3d(0%,0,0)",
      }
    }
  >
    <ul
      className="sldr__list"
    >
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide1"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide2"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide3"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide4"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide5"
        />
      </li>
      <li
        className="sldr__item"
        draggable={false}
      >
        <img
          src="http://placehold.it/1000x400/ffffff/c0392b/&text=slide6"
        />
      </li>
    </ul>
  </div>
</div>
`;
